Consider hiding profile images in index.html when viewed on mobile. #64   solved

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -40,6 +40,13 @@
     }
 }
 
+@media only screen and (max-width: 480px) {
+    .profile{
+        display: none;
+    }
+ 
+ }
+ 
 .hidden {
     opacity: 0;
 }
